try to fix resize button position bug on safari

--- a/css/ui.css
+++ b/css/ui.css
@@ -37,7 +37,7 @@
 
 .sidebar #sidebarResize {
 	position: fixed;
-	top: inherit;
+	bottom: 3px;
 	margin: 3px 0 0 -17px;
 	width: 16px;
 }
